<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnStartBat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStartBatch"
        android:text="@string/StartBatch"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onStartSingle"
        android:text="@string/start" />

    <CheckBox
        android:id="@+id/chkGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gps" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Period"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtPeriodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="50" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewSensores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>