<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <CheckBox
        android:id="@+id/chkSelectSensorTag"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="left|center_vertical" />

    <TextView
        android:id="@+id/txtSensorTagName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/chkSelectSensorTag"
        android:gravity="center_vertical"
        android:text="@string/address" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtSensorTagName"
        android:layout_toRightOf="@+id/chkSelectSensorTag"
        android:gravity="center_vertical"
        android:text="@string/descripcion" />

    <Button
        android:id="@+id/btnConnectOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/connectOne" />
</RelativeLayout>