<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelTemperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Temperature" />

            <TextView
                android:id="@+id/labelBarometro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Barometer" />

            <TextView
                android:id="@+id/labelHumedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Humidity" />

            <TextView
                android:id="@+id/labelLuz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTemperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/textViewBarometro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/textViewHumedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/textViewLuz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@android:color/holo_orange_light" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelMovimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Motion" />

        <TextView
            android:id="@+id/textViewMovimiento1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/textViewMovimiento2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@android:color/holo_purple" />

        <TextView
            android:id="@+id/textViewMovimiento3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@android:color/holo_orange_dark" />
    </LinearLayout>
</LinearLayout>
